--- a/3_css.css
+++ b/3_css.css
@@ -1,7 +1,7 @@
 /*#X Selector. Color hexadecimal*/
 
 #id-selector{
-  background: #00ffff;
+  color: #00ffff;
 }
 
 /*X Selector. Color hexadecimal*/
